--- a/OMI/Views/Infraestructura/Requermientos.cshtml
+++ b/OMI/Views/Infraestructura/Requermientos.cshtml
@@ -1,8 +1,9 @@
-﻿@using Omu.Awem.Helpers
+﻿
+@using Omu.Awem.Helpers
 @model IEnumerable<OMI.TbSolicitud>
 
 @{
-    ViewBag.Title = "AllSolicitud";
+    ViewBag.Title = "Requerimientos";
 }
 <div class="row">
     <div class="col-md-12">
@@ -11,16 +12,9 @@
                 <h3 class="panel-title">Ingenieria Aplicada OnePro</h3>
             </div>
             <div class="panel-body">
-                <h2>AllSolicitud</h2>
+                <h2>Requerimentos Recibidos</h2>
 
-                <p>
-                    <a class="btn btn-success" id="NuevoPedido" href="@Url.Action("NuevaSolicitud","Solicitud" ,new { id=-1})">Solicitud de Productos / Servicios</a>
-                  
-                </p>
-                <p>
-                    <a class="btn btn-success" id="NuevoPersonal" href="@Url.Action("Index","Personal" ,new { id=-1})">Solicitud de Personal</a>
-
-                </p>
+              
              
                 <table id="assets-data-table" class="table table-striped table-bordered" style="width:100%">
                     <thead>   <tr>
@@ -38,7 +32,7 @@
                             @Html.DisplayNameFor(model => model.TbUsuario.Nombre)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.EnviadoInfra)
+                            @Html.DisplayNameFor(model => model.EnviadoCom)
                         </th> 
                         <th>
                             Opciones
@@ -67,17 +61,14 @@
                             </td>
                             <td>
                                 <div id="@item.IdSolicitud">
-                                    @Html.DisplayFor(modelItem => item.EnviadoInfra)
+                                    @Html.DisplayFor(modelItem => item.EnviadoCom)
                                 </div>
                             </td>
                             
                             <td>
                    
-                                @Html.ActionLink("Details", "Details", new {id = item.IdSolicitud, idfor = item.IdFormato })
-                                <span> &#124; </span>
-                                @Html.ActionLink("Delete", "DeleteM", new {id = item.IdSolicitud, idfor = item.IdFormato })
-                              
-                    
+                            @Html.ActionLink("Detalles", "Details", new {id = item.IdSolicitud, idfor = item.IdFormato })
+                          
                         </tr>
          
                     }
