--- a/OMI/Views/Oportunidad/List.cshtml
+++ b/OMI/Views/Oportunidad/List.cshtml
@@ -49,7 +49,12 @@
                         <th>
                             @Html.DisplayNameFor(model => model.TbUsuario.Nombre)
                         </th>
-                        <th></th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Enviado)
+                        </th>
+                        <th>
+                            
+                        </th>
                     </tr>
                     </thead>
                     <tbody>
@@ -88,6 +93,9 @@
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.TbUsuario.Nombre)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Enviado)
                             </td>
                             <td>
                                 @Html.ActionLink("Detalles", "Edit", new { id = item.Id }) 
