--- a/OMI/Views/Shared/_MenuIzquierdo.cshtml
+++ b/OMI/Views/Shared/_MenuIzquierdo.cshtml
@@ -1,6 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
 
-
 <!-- ========== Left Sidebar Start ========== -->
 
 <div class="left side-menu">
@@ -135,6 +134,7 @@
                         <!--a href="#" class="waves-effect"><i class="md md-people"></i><span>C.V.</span><span class="pull-right"><i class="md md-add"></i></span></a>-->
                        
                         <li><a href="@Url.Action("index", "home")">Programa de Mantenimiento</a></li>
+                        <li><a href="@Url.Action("Requermientos", "Infraestructura")">Registro Solicitudes</a></li>
                         <li><a href="@Url.Action("index", "home")">Solicitud de Compra</a></li>
 
                     </ul>
@@ -144,7 +144,7 @@
                
                     <ul class="list-unstyled">
                         <!--a href="#" class="waves-effect"><i class="md md-people"></i><span>C.V.</span><span class="pull-right"><i class="md md-add"></i></span></a>-->
-                        <li><a href="@Url.Action("index", "home")">Solicitud Cotizacion</a></li>
+                        <li><a href="@Url.Action("SolCotizacion", "Admon")">Solicitud Cotizacion</a></li>
                         <li><a href="@Url.Action("index", "home")">Seleccion Cotizacion</a></li>
                         <li><a href="@Url.Action("index", "home")">Orden Compra</a></li>
                         <li><a href="@Url.Action("index", "home")">Evaluacion Post-Venta</a></li>
