--- a/OMI/Views/Admon/SolCotizacion.cshtml
+++ b/OMI/Views/Admon/SolCotizacion.cshtml
@@ -69,7 +69,7 @@
 
                                 <td>
 
-                                    @Html.ActionLink("Detalles", "Details", new { id = item.IdSolicitud, idfor = item.IdFormato })
+                                    @Html.ActionLink("Detalles", "Details", new { id = item.IdSolicitud })
 
                             </tr>
 
