--- a/OMI/Views/Infraestructura/Requermientos.cshtml
+++ b/OMI/Views/Infraestructura/Requermientos.cshtml
@@ -67,7 +67,7 @@
                             
                             <td>
                    
-                            @Html.ActionLink("Detalles", "Details", new {id = item.IdSolicitud, idfor = item.IdFormato })
+                            @Html.ActionLink("Detalles", "Details", new {id = item.IdSolicitud})
                           
                         </tr>
          
