--- a/OMI/Views/Admon/Details.cshtml
+++ b/OMI/Views/Admon/Details.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-12">
         <div class="panel panel-border panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">Ingenieria Aplicada OnePro @Model.TbSol.EnviadoCom</h3>
+                <h3 class="panel-title">Ingenieria Aplicada OnePro</h3>
             </div>
             <div class="panel-body">
               
@@ -69,14 +69,14 @@
                             
                            
 
-                        @Html.InitCrudPopupsForGrid("DinnersGrid", "Infraestructura")
+                        @Html.InitCrudPopupsForGrid("DinnersGrid", "Admon")
                         @* popup names will be action + gridid; name is used when calling awe.open(name) *@
                        
                         @if(Model.TbSol.EnviadoCom==0)
                         { 
                             @(Html.Awe().Grid("DinnersGrid")
                                   .Mod(o => o.PageInfo().ColumnsSelector().ColumnsAutohide())
-                                  .Url(Url.Action("GridGetItems", "Infraestructura"))
+                                  .Url(Url.Action("GridGetItems", "Admon"))
                                   .Resizable()
                                   .Reorderable()
                                   .Height(700)
@@ -91,29 +91,29 @@
                                       new Column {Name = "Unidad"},
                                       new Column {Name = "Descripcion"}.Mod(o => o.Nohide()),
                                       new Column {Name = "IdSupervisor", Header = "Autoriza"},
-                                      new Column {Name = "Estatus", ClientFormatFunc = "formatoaceptacion" },
+                                      new Column {Name = "Estatus", ClientFormatFunc = "formatoaceptacion", },
                                       new Column {Name ="Autorizacion",ClientFormat = GridUtils.EditFormatForGrid("DinnersGrid")}.Mod(o => o.Nohide())))
                         }
                         else{
-                        @(Html.Awe().Grid("DinnersGrid")
-                              .Mod(o => o.PageInfo().ColumnsSelector().ColumnsAutohide())
-                              .Url(Url.Action("GridGetItems", "Infraestructura"))
-                              .Resizable()
-                              .Reorderable()
-                              .Height(700)
-                              .Paging(false)
-                              .Groupable(false)
+                            @(Html.Awe().Grid("DinnersGrid")
+                                  .Mod(o => o.PageInfo().ColumnsSelector().ColumnsAutohide())
+                                  .Url(Url.Action("GridGetItems", "Admon"))
+                                  .Resizable()
+                                  .Reorderable()
+                                  .Height(700)
+                                  .Paging(false)
+                                  .Groupable(false)
                               
-                              .Columns(
-                                  new Column {Name = "Id", Width = 55},
-                                  new Column {Name = "Categoria", ClientFormat = ".Categoria", Header = "Categoria",}.Mod(o => o.Nohide()),
+                                  .Columns(
+                                      new Column {Name = "Id", Width = 55,Hidden = true},
+                                      new Column {Name = "Categoria", ClientFormat = ".Categoria", Header = "Categoria",}.Mod(o => o.Nohide()),
 
-                                  new Column {Name = "Cantidad",Width = 90}.Mod(o => o.Nohide()),
-                                  new Column {Name = "Unidad" }.Mod(o => o.Nohide()),
-                                  new Column {Name = "Descripcion"}.Mod(o => o.Nohide()),
-                                  new Column {Name = "IdSupervisor", Header = "Autoriza" }.Mod(o => o.Nohide()),
-                                  new Column {Name = "Estatus", ClientFormatFunc = "formatoaceptacion" }.Mod(o => o.Nohide())
-                                  ))
+                                      new Column {Name = "Cantidad"}.Mod(o => o.Nohide()),
+                                      new Column {Name = "Unidad" }.Mod(o => o.Nohide()),
+                                      new Column {Name = "Descripcion"}.Mod(o => o.Nohide()),
+                                      new Column {Name = "IdSupervisor", Header = "Autoriza" }.Mod(o => o.Nohide()),
+                                      new Column {Name = "Estatus", ClientFormatFunc = "formatoaceptacion" }.Mod(o => o.Nohide()),
+                                      new Column {Name ="Autorizacion",ClientFormat = GridUtils.EditFormatForGrid("DinnersGrid")}.Mod(o => o.Nohide())))
                         }
 
                         <br/>
@@ -121,13 +121,13 @@
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10 " style="align-items: right;">
                                
-                            @using (Html.BeginForm("Enviar", "Infraestructura", FormMethod.Post, new { @class = "normalPost" }))
+                            @using (Html.BeginForm("Enviar", "Admon", FormMethod.Post, new { @class = "normalPost" }))
                             {
                                 if (ViewBag.Visible != 1)
                                 {
-                                    <a class="btn btn-danger" id="btnCancelar" href="@Url.Action("Cancelar", "Solicitud")">Cancelar</a>
+                                    <a class="btn btn-danger" id="btnCancelar" href="@Url.Action("Cancelar", "Admon")">Cancelar</a>
                                     @*  <input type="submit" value="Guardar" id="btnSave" class="btn btn-primary"/><a class="btn btn-success" id="btnCancelar" href="@Url.Action("Enviar", "Solicitud")">Enviar</a>*@
-                                    <a class="btn btn-primary" id="btnSave" href="@Url.Action("Guadar", "Solicitud")">Guardar</a>
+                                    <a class="btn btn-primary" id="btnSave" href="@Url.Action("Guadar", "Admon")">Guardar</a>
 
                                     <button type="submit" class="btn btn-success">Enviar</button>
                                 }
@@ -157,6 +157,7 @@
         </div>
     </div>
 </div>
+
 
 
 
