--- a/OMI/Views/Account/Login.cshtml
+++ b/OMI/Views/Account/Login.cshtml
@@ -3,60 +3,72 @@
 @{
     ViewBag.Title = "Iniciar sesión";
 }
-
-<h2>@ViewBag.Title.</h2>
+<link href="~/Content/css/style.css" rel="stylesheet" />
 <div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Use una cuenta local para iniciar sesión.</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
+    <div class="col-md-12">
+        <div class="panel panel-border panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Ingenieria Aplicada OnePro</h3>
+            </div>
+            <div class="panel-body">
+                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+
+                   
+                    <div class="top-content">
+
+                        <div class="inner-bg">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-sm-8 col-sm-offset-2 text">
+                                        <h1>
+                                            <strong>OIM</strong> One Integration Management
+                                        </h1>
+
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6 col-sm-offset-3 form-box">
+                                        <div class="form-top">
+                                            <div class="form-top-left">
+                                                
+                                                <p>Ingrese su Usuario y Contraseña para acceder al sistema:</p>
+                                            </div>
+                                            <div class="form-top-right">
+                                                <i class="fa fa-key"></i>
+                                            </div>
+                                        </div>
+                                        <div class="form-bottom">
+                                            <form role="form" action="" method="post" class="login-form">
+                                                <div class="form-group">
+                                                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-username form-control", placeholder = "Username...", id = "form-username" })
+                                                    @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
+                                                </div>
+                                                <div class="form-group">
+                                                    @Html.PasswordFor(m => m.Password, new { @class = "form-password form-control", placeholder = "Password...", id = "form-password" })
+
+                                                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                                                </div>
+                                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                                <button type="submit" class="btn btn-success">Iniciar Sesión</button>
+                                            </form>
+                                          
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
+
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Iniciar sesión" class="btn btn-default" />
-                    </div>
-                </div>
-                <p>
-                    @Html.ActionLink("Registrar como nuevo usuario", "Register","Usuario")
-                </p>
-                @* Habilite esta opción después de habilitar la confirmación de la cuenta para la función de restablecimiento de contraseña
-                    <p>
-                        @Html.ActionLink("¿Ha olvidado su contraseña?", "ForgotPassword")
-                    </p>*@
-            }
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
+                }
+            </div>
+        </div>
     </div>
 </div>
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
