--- a/OMI/Views/Shared/_Layout.cshtml
+++ b/OMI/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
 <!-- Top Bar Start -->
 <div class="topbar">
     <!-- LOGO -->
-    <div class="topbar-left">B
+    <div class="topbar-left">
         <div class="text-center">
             <a href="@Url.Action("Index", "Home")" class="logo"><i class="md md-terrain"></i> <span>OnePro</span></a>
         </div>
