pasando a una DLL entity

--- a/OMI/Views/Admon/Details.cshtml
+++ b/OMI/Views/Admon/Details.cshtml
@@ -41,7 +41,7 @@
                                 <div class="panel-body">
                                     <div class="input-group ">
                                         <span class="input-group-addon" id="sizing-addon4">Folio</span>
-                                        <input type="text" class="form-control" name="Folio" placeholder="Username" aria-describedby="sizing-addon1" value="@Html.DisplayFor(m => m.TbSol.Folio)" style="text-align: right; color: red" readonly="true">
+                                        <input type="text" class="form-control" name="Folio" placeholder="Username" aria-describedby="sizing-addon1" value="@Html.DisplayFor(m => m.TbSol.Folio)" style="text-align: right; color: red" readonly=true>
                                     </div>
 
                                     <ul class="list-group">
