--- a/OMI/Views/Admon/SolCotizacion.cshtml
+++ b/OMI/Views/Admon/SolCotizacion.cshtml
@@ -1,7 +1,7 @@
 ﻿
 
 @using Omu.Awem.Helpers
-@model IEnumerable<OMI.TbSolicitud>
+@model IEnumerable<OIM_DAL.TbSolicitud>
 
 @{
     ViewBag.Title = "Requerimientos";
