--- a/OMI/Views/Admon/Edit.cshtml
+++ b/OMI/Views/Admon/Edit.cshtml
@@ -3,8 +3,8 @@
 {
     using (Html.Awe().BeginContext())
     {
-        @Html.EditorFor(o => o.Autorizar)
+        @Html.EditorFor(o => o.Proveedor)
 
-
+        @Html.EditorFor(o=> o.OtroProvedor)
     }
 }
