--- a/OMI/Views/Oportunidad/Index.cshtml
+++ b/OMI/Views/Oportunidad/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@using System.Web.UI.WebControls
-@model TbOportunidad
+﻿
+@using System.Web.UI.WebControls
+@model OMI.Models.TbOportunidad
 
 <div class="row">
 <div class="col-md-12">
