--- a/OMI/Views/Organizacion/Maestra.cshtml
+++ b/OMI/Views/Organizacion/Maestra.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OMI.TablaMaestra>
+﻿@model IEnumerable<OIM_DAL.TablaMaestra>
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-border panel-primary">
