--- a/OMI/Views/Infraestructura/Requermientos.cshtml
+++ b/OMI/Views/Infraestructura/Requermientos.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @using Omu.Awem.Helpers
-@model IEnumerable<OMI.TbSolicitud>
+@model IEnumerable<OIM_DAL.TbSolicitud>
 
 @{
     ViewBag.Title = "Requerimientos";
