--- a/OMI/Views/Infraestructura/Solicitudes.cshtml
+++ b/OMI/Views/Infraestructura/Solicitudes.cshtml
@@ -1,5 +1,5 @@
-﻿@using NPOI.OpenXmlFormats.Dml
-@model IEnumerable<OIM_DAL.Sp_AllPedido_Result>
+﻿@model IEnumerable<OIM_DAL.Sp_AllPedidoXEstatus_Result>
+    
 
 
 <div class="row">
@@ -9,15 +9,13 @@
                 <h3 class="panel-title">Sistema OIM - Ingenieria Aplicada OnePro</h3>
             </div>
             <div class="panel-body">
-                <p>Tabla de Registo  de Formato de Solicitud de requerimiento de producto y/o servicio</p>
-
-                <p>
-                   <a class="btn btn-success" id="NuevoPedido" href="@Url.Action("NuevaSolicitud","Solicitud" ,new { id=-1})">Nuevo Pedido</a>
-                    @*<a class="btn btn-success" id="btnCancelar" href="@Url.Action("Enviar", "Solicitud")">Enviar</a>*@
-                </p>
+               
                 <table id="assets-data-table" class="table table-striped table-bordered" style="width:100%">
                     <thead>   <tr>
           
+                        <th>
+                            @Html.DisplayNameFor(model => model.Id)
+                        </th>
                         <th>
                             @Html.DisplayNameFor(model => model.Folio)
                         </th>
@@ -34,10 +32,7 @@
                             @Html.DisplayNameFor(model => model.Cantidad)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.Autoriza)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.MiEstatus)
+                            @Html.DisplayNameFor(model => model.Estatus)
                         </th>
                         
                         <th>
@@ -55,6 +50,9 @@
                     {
                         <tr>
                             <td>
+                                @Html.DisplayFor(modelItem => item.Id)
+                            </td>
+                            <td>
                                 @Html.DisplayFor(modelItem => item.Folio)
                             </td>
                             <td>
@@ -70,10 +68,7 @@
                                 @Html.DisplayFor(modelItem => item.Cantidad)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Autoriza)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.MiEstatus)
+                                @Html.DisplayFor(modelItem => item.Estatus)
                             </td>
                           
                             <td>
@@ -96,4 +91,7 @@
         </div>
     </div>
 </div>
+
+
+
 
