--- a/OMI/Views/Solicitud/AllSolicitud.cshtml
+++ b/OMI/Views/Solicitud/AllSolicitud.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Omu.Awem.Helpers
-@model IEnumerable<OMI.TbSolicitud>
+@model IEnumerable<OIM_DAL.TbSolicitud>
 
 @{
     ViewBag.Title = "AllSolicitud";
