--- a/OMI/Views/Shared/_MenuIzquierdo.cshtml
+++ b/OMI/Views/Shared/_MenuIzquierdo.cshtml
@@ -147,7 +147,7 @@
                         <!--a href="#" class="waves-effect"><i class="md md-people"></i><span>C.V.</span><span class="pull-right"><i class="md md-add"></i></span></a>-->
                         <li><a href="@Url.Action("SolCotizacion", "Admon")">Solicitud Cotizacion</a></li>
                         <li><a href="@Url.Action("index", "home")">Seleccion Cotizacion</a></li>
-                        <li><a href="@Url.Action("index", "home")">Orden Compra</a></li>
+                        <li><a href="@Url.Action("OrdenCompra", "Admon")">Orden Compra</a></li>
                         <li><a href="@Url.Action("index", "home")">Evaluacion Post-Venta</a></li>
                         <li><a href="@Url.Action("index", "home")">Cumpliento Personal</a></li>
                         <li><a href="@Url.Action("index", "home")">Catalogo Proveedores</a></li>
